--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Página para mostrar el CV del alumno.</title>
     </head>
     <body>
-        <a href="Tarea2/Cv_IvanEscudero.html"><abbr title="Curriculum Vitae">Pulsa aquí para verlo!</abbr></a>
+        <a href="Tarea2/Cv_IvanEscudero.html"><abbr title="Currículum Vitae">Pulsa aqui para verlo!</abbr></a>
     </body>
 </html>
