--- a/Tarea2/Cv_IvanEscudero.html
+++ b/Tarea2/Cv_IvanEscudero.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta charset="UTF-8">
         <title>Currículum Vitae</title>
         <link rel="stylesheet" type="text/css" href="estilos/cv.css">
     </head>
